--- a/scss/main.scss
+++ b/scss/main.scss
@@ -108,8 +108,8 @@ img {max-width: $w12; height:auto; vertical-align: middle;}
 }
 
 .square {
-width: 250px;
-height: 250px;
+width: 220px;
+height: 220px;
 }
 
 .rectangle {
@@ -181,7 +181,7 @@ p {
   /*text-transform: uppercase;*/
 }
 .h2 {
-  font-size: 6vmin;
+  font-size: 4vmin;
   color: white;
 }
 
@@ -198,7 +198,7 @@ ul{
 
 
 .section-header {
-  font-size: 10vmin;
+  font-size: 7vmin;
   padding: 4rem 0 2rem 0;
   text-align: center;
 }
@@ -238,14 +238,35 @@ ul{
     background-image: url(../pics/pinklady.jpg);
 }
 
+.bgimg-1fix {
+  min-height: 300px;
+  background-position: center;
+  background-size: cover;
+  background-image: url(../pics/pinklady-fix.jpg);
+}
+
 .bgimg-2 {
   min-height: 300px;
   background-image: url(../pics/pinklady2.jpg)
 }
 
+.bgimg-2fix {
+  min-height: 300px;
+  background-position: center;
+  background-size: cover;
+  background-image: url(../pics/pinklady2-fix.jpg);
+}
+
 .bgimg-3 {
   min-height: 300px;
   background-image: url(../pics/pinklady3.jpg)
+}
+
+.bgimg-3fix {
+  min-height: 300px;
+  background-position: center;
+  background-size: cover;
+  background-image: url(../pics/pinklady3-fix.jpg);
 }
 
 .parallax {
@@ -281,7 +302,7 @@ ul{
     border: 2px solid #DC4A5C;
     border-radius: 25px;
     background-color: white;
-    width: 70%;
+    width: 60%;
     padding: 10px;
     color: #4B4D54;
     transition: all 0.5s;
@@ -330,6 +351,7 @@ ul{
 /* LISTS */
 
 .topnav {
+  z-index: 1;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -435,6 +457,7 @@ ul{
 .pb-10{padding-bottom: 10px;}
 .pb-45{padding-bottom: 45px;}
 .pr-0{padding-right: 0;}
+.pr-10{padding-right: 10px;}
 .pl-0{padding-left: 0;}
 .pt-0{padding-top: 0;}
 .pt-40 {padding-top: 40px;}
